option java_package = "fr.kissy.banshee.proto";
option java_outer_classname = "DebugPropertyDTO";
option java_generic_services = false;

import "Proto/Common.proto";

message DebugPropertyProto {
    optional string category = 1 [default = "default"];
    repeated Proto.Property properties = 2;
}